--- a/Assignment 5/index.html
+++ b/Assignment 5/index.html
@@ -33,9 +33,9 @@
 
     <h2>Part 5</h2>
     <div class='buttons'>
-      <button>Display: none </button>
-      <button>Visibility: hidden</button>
-      <button>Reset</button>
+      <button onclick="changeDisplay()">Display: none </button>
+      <button onclick="changeVisibility()">Visibility: hidden</button>
+      <button onclick="reset()">Reset</button>
     </div>
     <div class='box' id='magic'> 1 </div>
     <div class='box'> 2 </div>
@@ -45,5 +45,7 @@
     </ul>
 
   </body>
-  <script src="myscripts.js"></script>
+  <!--We add the script here for performance matters. This is bacause the .js-files can prevent the
+  site from being laoded for the users, something that is undesireable in most cases (top-down loading)-->
+  <script src="script.js"></script>
 </html>
